# quickpic

./: CMakeLists.txt  CameraListPopup.qml  CameraSelect.qml  CaptureButton.qml  Makefile  Popup.qml  README.md  Resolution.qml  ResolutionListPopup.qml  ViewPicture.qml  ZoomControl.qml  main.cpp  main.qml  quickpic.desktop  quickpic.pro  quickpic.qrc
.github/workflows/: work.yaml
debian/: changelog  control  quickpic.install  quickpic.substvars
